; ModuleID = '/home/carl/AnghaBench/lab/engine/code/ui/extr_ui_main.c__UI_DrawRect.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/ui/extr_ui_main.c__UI_DrawRect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_UI_DrawRect(float %0, float %1, float %2, float %3, float %4, float* %5) #0 {
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  %9 = alloca float, align 4
  %10 = alloca float, align 4
  %11 = alloca float, align 4
  %12 = alloca float*, align 8
  store float %0, float* %7, align 4
  store float %1, float* %8, align 4
  store float %2, float* %9, align 4
  store float %3, float* %10, align 4
  store float %4, float* %11, align 4
  store float* %5, float** %12, align 8
  %13 = load float*, float** %12, align 8
  %14 = call i32 @trap_R_SetColor(float* %13)
  %15 = load float, float* %7, align 4
  %16 = load float, float* %8, align 4
  %17 = load float, float* %9, align 4
  %18 = load float, float* %10, align 4
  %19 = load float, float* %11, align 4
  %20 = call i32 @_UI_DrawTopBottom(float %15, float %16, float %17, float %18, float %19)
  %21 = load float, float* %7, align 4
  %22 = load float, float* %8, align 4
  %23 = load float, float* %9, align 4
  %24 = load float, float* %10, align 4
  %25 = load float, float* %11, align 4
  %26 = call i32 @_UI_DrawSides(float %21, float %22, float %23, float %24, float %25)
  %27 = call i32 @trap_R_SetColor(float* null)
  ret void
}

declare dso_local i32 @trap_R_SetColor(float*) #1

declare dso_local i32 @_UI_DrawTopBottom(float, float, float, float, float) #1

declare dso_local i32 @_UI_DrawSides(float, float, float, float, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
